ingress/ingress-rules-testsb.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: testsb-ingress
  namespace: business
  annotations:
    kubernetes.io/ingress.class: testsbclass
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /(.*)
        backend:
          serviceName: testsb
          servicePort: 8080
